# src/index.ts
@@ -5,16 +5,20 @@ import swaggerFile from './swagger.json';
 import { connection, createConnectionDataBase } from './database/db';
 import { createTableUser, userModel } from './database/models/users';
 import { createTableOrder, orderModel } from './database/models/orders';
+import { clientModel, createTableClients } from './database/models/clients';
+import { clientsRoutes } from './routes/clients.routes';
 
 createConnectionDataBase(connection);
 createTableUser(userModel);
 createTableOrder(orderModel);
+createTableClients(clientModel);
 
 const app = express();
 
 app.use(express.json());
 
 app.use('/users', usersRoutes);
+app.use('/clients', clientsRoutes);
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
